--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
 
 <div class="bottle-counter">
   <h2>Chasing Bottles</h2>
-  <img class="bottle" src="./img/bottle.png" width="5%" height="5%" />
-  <h1>0</h1>
 </div>
 
+<div class="littleboss">
+  <img src="./img/littleboss.png" width="45%" height="45%"/>
 
-    <canvas class="canvas" width="900" height="500"></canvas>
+</div>
+
+<img class="bottle" src="./img/bottle.png" width="5%" height="5%" />
+
+
+
+    <canvas class="canvas" width="700" height="600"></canvas>
 
   <img class="main-baby" src="./img/main.png" width="50%" height="50%">
     <img class="bottle2" src="./img/bottle.png" width="5%" height="5%" />
