--- a/index.html
+++ b/index.html
@@ -14,24 +14,67 @@
   <body>
 
 
+<!-- Name of the game -->
+  <div class="bottle-counter">
+    <h2>Chasing Bottles</h2>
+  </div>
 
-<div class="bottle-counter">
-  <h2>Chasing Bottles</h2>
+<!-- little boss image -->
+  <div class="littleboss">
+    <img src="./img/littleboss.png" width="45%" height="45%"/>
+  </div>
+
+<!-- bottles image -->
+    <img class="bottle" src="./img/bottle.png" width="5%" height="5%" />
+
+<!-- buttons -->
+<div class="btn-group btn-group-justified btngroup" role="group" aria-label="...">
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Start</button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Pause</button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default">Refresh</button>
+  </div>
 </div>
 
-<div class="littleboss">
-  <img src="./img/littleboss.png" width="45%" height="45%"/>
 
-</div>
-
-<img class="bottle" src="./img/bottle.png" width="5%" height="5%" />
-
-
-
+<!-- canvas -->
     <canvas class="canvas" width="700" height="600"></canvas>
 
+<!-- baby in canvas -->
   <img class="main-baby" src="./img/main.png" width="50%" height="50%">
-    <img class="bottle2" src="./img/bottle.png" width="5%" height="5%" />
+
+<!-- bottles in canvas -->
+  <img class="bottle2" src="./img/bottle.png" width="5%" height="5%" />
+
+
+
+  <div class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Game Over</h4>
+        </div>
+        <div class="modal-body">
+          <img class="gameoverbaby" src="./img/gameoverbaby.png" alt="">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">New Game</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+
+
+
+
+
 
 
 
