--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title> Chasing Bottles </title>
 
+<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     <!-- Bootstrap's CSS (put it before yours) -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -19,6 +20,36 @@
     <h2>Chasing Bottles</h2>
   </div>
 
+<button class="btn btn-default instruccions startButtons" type="submit">Instructions</button>
+
+<!-- instructions Modal -->
+<div class="modal fade modalInstructions" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Instructions</h4>
+      </div>
+      <div class="modal-body">
+        <img class="instructions" src="./img/instructions.png" alt="">
+        <p>If you touch the infected <br>bottle 3 times GAME OVER</p>
+        <img class="infected" src="./img/infectedbottle.png" width="110px" height="110px" alt="">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!-- sounds -->
+<audio id="byeBye" src="./sounds/bye-bye.mp3"></audio>
+<audio id="sneeze" src="./sounds/sneeze.mp3"></audio>
+<audio id="background" src="./sounds/Cheerful/Cheerful.mp3"></audio>
+<audio id="babyTalk" src="./sounds/babytalk.mp3"></audio>
+
+
 <!-- little boss image -->
   <div class="littleboss">
     <img src="./img/littleboss.png" width="45%" height="45%"/>
@@ -28,15 +59,12 @@
     <img class="bottle" src="./img/bottle.png" width="5%" height="5%" />
 
 <!-- buttons -->
-<div class="btn-group btn-group-justified btngroup" role="group" aria-label="...">
+<div class="btn-group btn-group-justified btngroup botones" role="group" aria-label="...">
   <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default">Start</button>
+    <button type="button" class="btn btn-default startButtons start">Start</button>
   </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default">Pause</button>
-  </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default">Refresh</button>
+  <div class="btn-group " role="group">
+    <button type="button" class="btn btn-default pause startButtons">Pause</button>
   </div>
 </div>
 
@@ -51,8 +79,26 @@
   <img class="bottle2" src="./img/bottle.png" width="5%" height="5%" />
 
 
+  <!-- Winner Modal-->
+    <div class="modal fade modalWinner" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title"> You Won !! </h4>
+          </div>
+          <div class="modal-body">
+            <img class="winner" src="https://media.giphy.com/media/3o6Yg725hMPzA5sxyg/giphy.gif" alt="">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default closeGame" data-dismiss="modal">Close</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
-  <div class="modal fade" tabindex="-1" role="dialog">
+<!-- game Over Modal-->
+  <div class="modal fade modalGameOver" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -63,15 +109,11 @@
           <img class="gameoverbaby" src="./img/gameoverbaby.png" alt="">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">New Game</button>
+          <button type="button" class="btn btn-default closeGame" data-dismiss="modal">Close</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
-
-
-
 
 
 
